--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon May 25 21:51:22 KST 2020
-sdk.dir=C\:\\Users\\oksma\\AppData\\Local\\Android\\Sdk
+#Sat May 30 14:26:39 KST 2020
+sdk.dir=C\:\\Users\\seungsu\\AppData\\Local\\Android\\Sdk
