--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PathActivity"></activity>
+        <activity android:name=".ListSortingActivity"></activity>
+        <activity android:name=".PathActivity" />
         <activity android:name=".InfoActivity" />
         <activity android:name=".MapActivity" />
         <activity android:name=".MainActivity">
