--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jun 01 18:05:50 KST 2020
-sdk.dir=/Users/bominkim/Library/Android/sdk
+#Mon Jun 01 19:58:50 KST 2020
+sdk.dir=C\:\\Users\\seungsu\\AppData\\Local\\Android\\Sdk
