승용이꺼 pull 성공
Signed-off-by: seungsuuu <tmdtn013@naver.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".ListSortingActivity"></activity>
         <activity android:name=".PathActivity" />
-        <activity android:name=".InfoActivity" />
+        <activity android:name=".InfoAcitivity" />
         <activity android:name=".MapActivity" />
         <activity android:name=".LikesActivity"/>
         <activity android:name=".MainActivity">
